# skillweave

./: Dockerfile  LICENSE  README.md  latex_tables.txt  patch_v2.py  pyproject.toml  requirements.txt  run_experiments.sh
experiments/: generate_tables.py  run_experiments.py
results/aggregated/: all_results.json  experiment_metadata.json  table_i_conflict_detection.json  table_ii_composition_overhead.json  table_iii_policy_violations.json  table_iv_composition_reliability.json
results/raw/: h1_conflict_detection_raw.csv  h2_composition_overhead_raw.csv  h3_policy_violations_raw.csv  h4_composition_reliability_raw.csv
src/skillweave/: __init__.py  algebra.py  catalog.py  governance.py  models.py  protocol.py  registry.py
