[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "skillweave"
version = "0.1.0"
description = "A Semantic Composition Framework for Multi-Agent Skill Orchestration in Enterprise Environments"
authors = [
    { name = "Vivek Acharya", email = "vacharya@bu.edu" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]
